[gd_scene load_steps=10 format=3 uid="uid://djeskkneef5x5"]

[ext_resource type="Theme" uid="uid://fjn5vqo0plgq" path="res://Scenes/Menu/MyTheme.tres" id="1_k34vf"]
[ext_resource type="Script" path="res://Scripts/Level0.gd" id="1_mny7m"]
[ext_resource type="PackedScene" uid="uid://c5pohpd14i8bx" path="res://Scenes/Menu/MyButton.tscn" id="2_6pk28"]
[ext_resource type="PackedScene" uid="uid://b7qs5p0n45xo0" path="res://Scenes/InGame/CharThug.tscn" id="4_nl1g1"]
[ext_resource type="PackedScene" uid="uid://de87owwi01ddr" path="res://Scenes/InGame/TilesFloor.tscn" id="4_w8h30"]
[ext_resource type="Texture2D" uid="uid://bbl4vj40fcjsu" path="res://Sauce/Sprites/Puzzle1/Puzzle-Level1.jpg" id="6_cgjip"]
[ext_resource type="Texture2D" uid="uid://pf17ggynwb55" path="res://Sauce/Sprites/UI-Thumbtack.png" id="7_xm64p"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ogo7o"]
size = Vector2(52, 777)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h31ua"]
size = Vector2(675, 54)

[node name="Menu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_mny7m")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_k34vf")

[node name="BG" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -723.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.960784, 0.952941, 0.929412, 1)

[node name="Title" type="Label" parent="Control/BG"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -139.5
offset_top = -180.0
offset_right = 143.5
offset_bottom = -60.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "Puzzlegenic
Beatings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Control/BG"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -39.5
offset_top = -14.0
offset_right = 43.5
offset_bottom = 129.0
grow_horizontal = 2
grow_vertical = 2

[node name="Start" parent="Control/BG/VBoxContainer" instance=ExtResource("2_6pk28")]
layout_mode = 2
text = "START"

[node name="Options" parent="Control/BG/VBoxContainer" instance=ExtResource("2_6pk28")]
layout_mode = 2
text = "OPTIONS"

[node name="Quit" parent="Control/BG/VBoxContainer" instance=ExtResource("2_6pk28")]
layout_mode = 2
text = "QUIT"

[node name="LevelSelect" type="Panel" parent="Control/BG"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 70.0
offset_top = -21.0
offset_right = 263.0
offset_bottom = 138.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Control/BG/LevelSelect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -65.0
offset_top = 18.0
offset_right = 65.0
offset_bottom = 42.0
grow_horizontal = 2
text = "Select Level:"

[node name="VBoxContainer2" type="VBoxContainer" parent="Control/BG/LevelSelect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -64.5
offset_top = 52.0
offset_right = 65.5
offset_bottom = 134.0
grow_horizontal = 2
theme_override_constants/separation = 20

[node name="Practice" parent="Control/BG/LevelSelect/VBoxContainer2" instance=ExtResource("2_6pk28")]
layout_mode = 2
text = "Practice"

[node name="Level1" parent="Control/BG/LevelSelect/VBoxContainer2" instance=ExtResource("2_6pk28")]
layout_mode = 2
text = "Level 1"

[node name="Johns" type="Node2D" parent="."]

[node name="TilesFloor" parent="Johns" instance=ExtResource("4_w8h30")]
scale = Vector2(3, 3)
layer_0/tile_data = PackedInt32Array(851992, 0, 1, 786456, 0, 2, 720920, 65536, 2, 655384, 0, 3, 589848, 65536, 1, 524312, 65536, 2, 458776, 131072, 2, 393240, 65536, 1, 327704, 0, 2, 262168, 0, 1, 196632, 131072, 1, 131096, 0, 3, 65560, 65536, 2, 24, 131072, 2, -65512, 65536, 2, 851991, 0, 3, 786455, 65536, 1, 720919, 131072, 2, 655383, 65536, 1, 589847, 0, 1, 524311, 0, 3, 458775, 131072, 2, 393239, 131072, 1, 327703, 131072, 2, 262167, 0, 1, 196631, 65536, 2, 131095, 0, 3, 65559, 65536, 2, 23, 65536, 1, -65513, 65536, 2, 851990, 0, 3, 786454, 0, 1, 720918, 131072, 2, 655382, 131072, 2, 589846, 0, 3, 524310, 0, 3, 458774, 65536, 1, 393238, 0, 3, 327702, 65536, 1, 262166, 0, 3, 196630, 0, 1, 131094, 0, 2, 65558, 131072, 2, 22, 131072, 2, -65514, 0, 2, 851989, 0, 1, 786453, 65536, 2, 720917, 65536, 2, 655381, 65536, 2, 589845, 0, 1, 524309, 65536, 2, 458773, 0, 3, 393237, 131072, 2, 327701, 0, 2, 262165, 0, 3, 196629, 0, 3, 131093, 65536, 2, 65557, 65536, 1, 21, 65536, 2, -65515, 65536, 2, 851988, 131072, 1, 786452, 0, 2, 720916, 65536, 2, 655380, 65536, 2, 589844, 0, 2, 524308, 0, 3, 458772, 131072, 1, 393236, 131072, 1, 327700, 0, 1, 262164, 65536, 1, 196628, 65536, 1, 131092, 0, 3, 65556, 65536, 1, 20, 131072, 1, -65516, 65536, 2, 851987, 0, 3, 786451, 65536, 2, 720915, 65536, 1, 655379, 131072, 1, 589843, 65536, 1, 524307, 65536, 1, 458771, 65536, 1, 393235, 131072, 2, 327699, 0, 3, 262163, 65536, 1, 196627, 131072, 2, 131091, 0, 3, 65555, 131072, 1, 19, 0, 3, -65517, 0, 3, 851986, 65536, 1, 786450, 65536, 2, 720914, 65536, 2, 655378, 65536, 2, 589842, 0, 1, 524306, 65536, 2, 458770, 0, 1, 393234, 0, 1, 327698, 0, 3, 262162, 0, 3, 196626, 65536, 1, 131090, 0, 3, 65554, 0, 3, 18, 65536, 1, -65518, 0, 3, 851985, 131072, 1, 786449, 0, 1, 720913, 65536, 1, 655377, 0, 3, 589841, 65536, 2, 524305, 0, 3, 458769, 0, 3, 393233, 0, 3, 327697, 65536, 1, 262161, 65536, 1, 196625, 131072, 2, 131089, 65536, 1, 65553, 65536, 2, 17, 65536, 2, -65519, 0, 2, 851984, 65536, 1, 786448, 0, 3, 720912, 0, 2, 655376, 131072, 2, 589840, 65536, 2, 524304, 65536, 2, 458768, 0, 3, 393232, 0, 3, 327696, 0, 3, 262160, 131072, 2, 196624, 0, 3, 131088, 65536, 1, 65552, 131072, 2, 16, 65536, 1, -65520, 0, 3, 851983, 131072, 2, 786447, 131072, 2, 720911, 65536, 1, 655375, 131072, 2, 589839, 131072, 2, 524303, 65536, 1, 458767, 65536, 2, 393231, 65536, 2, 327695, 65536, 1, 262159, 65536, 1, 196623, 65536, 1, 131087, 131072, 2, 65551, 65536, 1, 15, 131072, 2, -65521, 0, 3, 851982, 0, 2, 786446, 131072, 1, 720910, 65536, 2, 655374, 131072, 2, 589838, 0, 3, 524302, 65536, 1, 458766, 0, 3, 393230, 0, 3, 327694, 0, 1, 262158, 131072, 2, 196622, 0, 3, 131086, 131072, 2, 65550, 65536, 1, 14, 0, 3, -65522, 0, 3, 851981, 0, 2, 786445, 0, 1, 720909, 131072, 1, 655373, 65536, 1, 589837, 0, 3, 524301, 0, 3, 458765, 65536, 2, 393229, 0, 3, 327693, 131072, 1, 262157, 131072, 1, 196621, 65536, 2, 131085, 0, 3, 65549, 0, 3, 13, 65536, 1, -65523, 0, 3, 851980, 65536, 2, 786444, 65536, 2, 720908, 0, 3, 655372, 65536, 1, 589836, 131072, 1, 524300, 0, 2, 458764, 0, 1, 393228, 65536, 2, 327692, 65536, 2, 262156, 131072, 2, 196620, 65536, 2, 131084, 131072, 2, 65548, 0, 3, 12, 65536, 1, -65524, 0, 2, 851979, 65536, 1, 786443, 131072, 2, 720907, 131072, 2, 655371, 131072, 2, 589835, 0, 3, 524299, 65536, 1, 458763, 131072, 2, 393227, 0, 2, 327691, 0, 3, 262155, 0, 1, 196619, 0, 3, 131083, 0, 3, 65547, 0, 3, 11, 0, 3, -65525, 65536, 1, 851978, 65536, 2, 786442, 0, 3, 720906, 131072, 2, 655370, 131072, 2, 589834, 65536, 1, 524298, 65536, 1, 458762, 65536, 1, 393226, 0, 1, 327690, 131072, 1, 262154, 131072, 2, 196618, 131072, 1, 131082, 131072, 2, 65546, 131072, 2, 10, 131072, 2, -65526, 131072, 1, 851977, 0, 2, 786441, 0, 3, 720905, 65536, 2, 655369, 65536, 2, 589833, 0, 3, 524297, 0, 3, 458761, 131072, 2, 393225, 65536, 1, 327689, 65536, 1, 262153, 131072, 1, 196617, 65536, 2, 131081, 0, 3, 65545, 65536, 1, 9, 131072, 2, -65527, 65536, 1, 851976, 131072, 1, 786440, 65536, 2, 720904, 65536, 2, 655368, 0, 3, 589832, 0, 1, 524296, 131072, 2, 458760, 131072, 1, 393224, 131072, 2, 327688, 65536, 1, 262152, 65536, 1, 196616, 65536, 1, 131080, 0, 2, 65544, 0, 3, 8, 131072, 2, -65528, 65536, 1)

[node name="StaticBody2D" type="StaticBody2D" parent="Johns"]
position = Vector2(403, 251)
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Johns/StaticBody2D"]
position = Vector2(37, 55.5)
shape = SubResource("RectangleShape2D_ogo7o")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Johns/StaticBody2D"]
position = Vector2(730, 57)
shape = SubResource("RectangleShape2D_ogo7o")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Johns/StaticBody2D"]
position = Vector2(381.5, -218)
shape = SubResource("RectangleShape2D_h31ua")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Johns/StaticBody2D"]
position = Vector2(375, 399)
shape = SubResource("RectangleShape2D_h31ua")

[node name="Thug" parent="Johns" instance=ExtResource("4_nl1g1")]
position = Vector2(890, 540)
scale = Vector2(3, 3)
collision_mask = 9

[node name="Thug2" parent="Johns" instance=ExtResource("4_nl1g1")]
position = Vector2(646, 499)
scale = Vector2(3, 3)
collision_mask = 9

[node name="Thug3" parent="Johns" instance=ExtResource("4_nl1g1")]
position = Vector2(665, 342)
scale = Vector2(3, 3)
collision_mask = 9

[node name="Thug4" parent="Johns" instance=ExtResource("4_nl1g1")]
position = Vector2(816, 213)
scale = Vector2(3, 3)
collision_mask = 9

[node name="Menace" parent="Johns" instance=ExtResource("4_nl1g1")]
position = Vector2(952, 389)
scale = Vector2(3.435, 3.435)
collision_mask = 9
hp = 300
realdmg = 50
boss = true

[node name="Sprite2D" type="Sprite2D" parent="Johns"]
position = Vector2(590, 135)
rotation = 0.0770663
scale = Vector2(0.56114, 0.56114)
texture = ExtResource("6_cgjip")

[node name="Sprite2D" type="Sprite2D" parent="Johns/Sprite2D"]
texture_filter = 1
position = Vector2(-99.5991, -159.806)
rotation = 0.317427
scale = Vector2(4.375, 4.375)
texture = ExtResource("7_xm64p")

[connection signal="pressed" from="Control/BG/VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Control/BG/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Control/BG/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Control/BG/LevelSelect/VBoxContainer2/Practice" to="." method="_on_practice_pressed"]
[connection signal="pressed" from="Control/BG/LevelSelect/VBoxContainer2/Level1" to="." method="_on_level_1_pressed"]
